# air

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: client.rs  host.rs  lib.rs  main.rs  profile.rs  transcript.rs
src/client/: mod.rs
src/host/: custom.rs  mod.rs  openai.rs
