[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
