[package]
name = "air"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE.txt"
categories = ["command-line-utilities"]

[lib]
name = "air"
path = "src/lib.rs"

[[bin]]
name = "air"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
enum-iterator = "2.0.0"
inquire = "0.7.4"
keyring = "2.3.2"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
url = "2.5.0"

[dev-dependencies]
chrono = "0.4.37"
